# QuantTrading

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: bollinger_meanrev.yaml  ma_cross.yaml  portfolio.yaml  portfolio_smoke.yaml
runners/: _shared.py  analyze.py  backtest.py  live.py  orchestrator.py  paper.py  warmup.py
src/quant/: __init__.py
strategies/: __init__.py  bollinger_meanrev.py  donchian.py  ma_cross.py  momentum.py  rsi_meanrev.py
tests/: test_bollinger_meanrev.py  test_ma_cross.py
