[project]
name = "quant"
version = "0.0.1"
description = "Personal quant trading system: shared strategy code across backtest / paper / live."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "pyyaml",
    "python-dotenv",
    "loguru",
]

[project.optional-dependencies]
backtest = ["vectorbt"]
data = ["akshare", "tushare"]
crypto = ["ccxt"]
dev = ["pytest", "pytest-asyncio", "ruff", "ipykernel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
