[project]
name = "quanttrading"
version = "0.0.1"
description = "Personal US-equity quant: shared strategy across backtest / paper / live."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "pyyaml",
    "python-dotenv",
    "matplotlib",
]

[project.optional-dependencies]
broker = ["alpaca-py"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strategies", "runners"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
